@@ -9709,6 +9709,7 @@ boost/libs/wave/test/testwave/testfiles/999_009.cpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testfiles/999_010.cpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testfiles/999_011.cpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testfiles/999_012.cpp svneol=native#text/plain
+boost/libs/wave/test/testwave/testfiles/999_013.cpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testfiles/test.cfg -text
 boost/libs/wave/test/testwave/testwave.cpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testwave_app.cpp svneol=native#text/plain
